Rename project from Oraxa to Omnia and some refactoring and enhancement